# suscape-devkit

./: .gitignore  .gitingore
ada_process/: cp_multi.py  cp_online.py  gen_img.py  offline.py  online.py  random_select.py  util.py
pcl_file/: CMakeCache.txt  CMakeLists.txt  Makefile  callpy.py  calls.ipynb  cmake_install.cmake  online.cpp  sus_vis  suscape_visualize.cpp  test_read_bin
pcl_file/new_build/: CMakeCache.txt  Makefile  cmake_install.cmake  sus_vis
s1s2_txts/: scene-000000_s1s2.txt  scene-000008_s1s2.txt  scene-000015_s1s2.txt  scene-000022_s1s2.txt  scene-000024_s1s2.txt  scene-000036_s1s2.txt  scene-000049_s1s2.txt  scene-000054_s1s2.txt  scene-000057_s1s2.txt  scene-000065_s1s2.txt  scene-000069_s1s2.txt  scene-000078_s1s2.txt  scene-000079_s1s2.txt  scene-000083_s1s2.txt  scene-000087_s1s2.txt  scene-000092_s1s2.txt  scene-000105_s1s2.txt  scene-000118_s1s2.txt  scene-000121_s1s2.txt  scene-000128_s1s2.txt  scene-000129_s1s2.txt  scene-000130_s1s2.txt  scene-000141_s1s2.txt  scene-000215_s1s2.txt  scene-000220_s1s2.txt  scene-000227_s1s2.txt  scene-000236_s1s2.txt  scene-000237_s1s2.txt  scene-000241_s1s2.txt  scene-000244_s1s2.txt  scene-000246_s1s2.txt  scene-000247_s1s2.txt  scene-000253_s1s2.txt  scene-000258_s1s2.txt  scene-000261_s1s2.txt  scene-000262_s1s2.txt  scene-000264_s1s2.txt  scene-000265_s1s2.txt  scene-000276_s1s2.txt  scene-000281_s1s2.txt  (+105 more)
src/suscape/dataset/: __init__.py
tests/: demo.ipynb
